# watchdog

./: .gitignore  README.md
agent/: pyproject.toml  watchdog-agent.service
agent/src/watchdog_agent/: __init__.py  agent.py  config.py  main.py  monitors.py  notifier.py
manager/: pyproject.toml  watchdog-manager.desktop
manager/qml/: Main.qml
manager/src/watchdog_manager/: __init__.py  backend.py  main.py
