[project]
name = "watchdog-manager"
version = "0.1.0"
description = "GUI for managing Watchdog Agent topics using AI chat"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
]
# Note: PySide6 comes from system packages (python3-pyside6) for Kirigami support

[project.scripts]
watchdog-manager = "watchdog_manager.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchdog_manager"]
